doqmeat/!f/homepage-v3/flower.css
/* ... */
#intro {
	font-family: gaegu-l, var(--fonts);
	padding-bottom: 50px;
	border: 3px dotted var(--d-brown)
}

#intro p {
	margin-top: 0;
}

.intro-img {
	content: url(/!g/deco/kitty-text.gif);
	margin: 5px;
}

header {
	height: 112%;
	color: #fff;
	font-size: 17px
}

header p {
	font-family: spirit, var(--fonts);
	font-size: 20px;
	margin-top: -10px;
	margin-left: 120px;
	position: absolute
}

h1 {
	font-family: typogarden, var(--fonts);
	font-size: 89px;
	font-weight: 400;
	letter-spacing: 4px;
	filter: drop-shadow(2px 0px 0px var(--shadow)) drop-shadow(0px 2px 0px var(--shadow)) drop-shadow(-2px 0px 0px var(--shadow)) drop-shadow(0px -2px 0px var(--shadow));
	pointer-events: none;
}

h2 {
	color: var(--d-brown);
	font-weight: 400;
	font-family: spirit, var(--fonts);
	font-size: 20px;
	margin-bottom: 5px;
	line-height: 24px
}

nav h3 {
	background: white;
	background-image: url(/!g/bg/h069-5.gif);
	border-radius: 10px;
	font-family: spirit, var(--fonts);
	font-weight: 400;
	font-size: 16px;
	border: 2px dashed var(--black);
	box-shadow: 1px 1px 6px 1px var(--l-pink) inset
}

h4 {
	font-family: spirit, var(--fonts);
	font-size: 16px;
	font-weight: 400
}

nav a img,
nav button img {
	vertical-align: middle
}

nav a,
nav button {
	font-family: var(--fonts);
	color: var(--d-brown);
	font-size: 19px;
	font-weight: 700;
	background: transparent;
	padding: 0 3px 0 5px;
	margin: 5px;
	text-decoration: none;
	transition-timing-function: ease-out;
	transition-duration: .3s
}

nav a:hover,
nav button:hover {
	color: var(--d-brown);
	letter-spacing: 0;
	background: url(/!g/bg/ritva-1.gif);
	background-size: 50px;
	border: 1px solid var(--d-brown);
	margin-left: 20px;
}

nav button {
	cursor: help;
	text-align: left;
	width: 90%;
	padding: 2px 5px 2px 5px;
	border: none;
	box-shadow: none;
	line-height: normal;
}

nav button:hover {
	box-shadow: none;
}

nav h2 {
	color: var(--d-blue)
}

button {
	font-family: nintendo-ds-bios, var(--fonts);
	font-size: 17px;
	color: var(--d-brown);
	box-shadow: 1px 1px 6px 1px var(--l-yellow) inset;
	background: var(--l-blue);
	border: 3px inset var(--l-yellow);
	line-height: 20px;
}

button:hover {
	color: var(--d-pink);
	background: var(--l-yellow);
	border: 3px outset var(--d-pink);
	box-shadow: 1px 1px 6px 1px var(--l-pink) inset
}

#music-btn {
	background: var(--l-brown);
	border: 4px ridge var(--l-yellow)
}

.imood {
	font-family: simple, var(--fonts);
	font-size: 20px;
	vertical-align: text-bottom
}

#status h2 {
	margin: 0;
	line-height: 23px
}

#status {
	font-family: nintendo-ds-bios, var(--fonts);
	font-size: 16px;
	word-spacing: 3px;
	letter-spacing: 1px;
	background-image: url(/!g/homepage/cloud2.png)
}

#status a {
	color: var(--d-blue);
	text-decoration: none
}

#status a:hover {
	letter-spacing: 1px;
}

#statuscafe {
	font-family: nintendo-ds-bios, var(--fonts);
	letter-spacing: 0px;
	line-height: 25px;
	font-size: 19px;
	word-spacing: 5px;
	background: white;
	background-size: 35px;
	margin: auto;
	margin-bottom: 10px;
	border: 1px dashed grey;
	width: 95%;
	border-radius: 15px;
}

#statuscafe-content {
	padding: 5px;
	box-shadow: 1px 0px 10px 0px #f9f1ce inset, 0px 0px 10px 1px #f9f1ce inset;
}

#statuscafe-username {
	padding: 1px 7px;
	text-align: left;
	color: black;
	background: #f9f1ce;
	border-radius: 15px 15px 0 0;
	font-size: 17px;
}

#statuscafe-username a {
	color: black;
}

#statuscafe-username::before {
	padding-right: 4px;
	content: url(/!g/pix/staryellow.gif);
}

#statuscafe-username a:hover {
	text-decoration: underline
}

.hl {
	background: url(/!g/bg/h077-2.gif);
	background-size: 50px;
	border: 1px solid var(--black);
	color: var(--black);
	border-radius: 10px;
	padding: 4px;
	vertical-align: middle
}

#current {
	font-family: nintendo-ds-bios, var(--fonts);
	font-size: 20px;
	word-spacing: 4px;
	line-height: 22px
}

#current i {
	text-shadow: 1px 1px #fff
}

#current a {
	color: var(--black);
	font-weight: 400
}

#current a:hover {
	letter-spacing: 1px;
	text-decoration: none
}

.date {
	font-family: simple, var(--fonts);
	font-size: 20px;
	color: var(--d-blue);
	background: var(--bg2);
	line-height: 16px;
	letter-spacing: 2px;
	text-align: center;
	margin: 0;
	padding-bottom: 2px;
	border: 1px solid #fff;
	border-radius: 20px
}

#updates {
	font-family: gaegu-l, var(--fonts);
	font-size: 18px;
	line-height: 20px;
	padding-bottom: 25px
}

#updates a {
	color: var(--l-yellow);
	text-shadow: 2px 1px 2px var(--d-brown);
	text-decoration: none;
}

h4.feed-item-title {
	margin: 0 5px;
	font-family: gaegu-r, var(--fonts);
	font-size: 16px;
}

.feed-item-desc {
	padding: 0;
	margin: 0px 5px;
	margin-bottom: 15px;
	font-size: 15px;
}

.feed-item-desc img {
	vertical-align: middle;
}

.feed-item-desc::before {
	content: url(/!g/pix/1leaf.png);
	padding: 6px 5px;
}

.feed-item-desc:nth-of-type(1) {
	padding: 8px;
	font-family: gaegu-r, var(--fonts);
	font-size: 16px;
	border: 2px dashed #EBBBE1;
	border-radius: 10px;
	background: white;
	background-image: url(/!g/bg/h096-2.gif);
	box-shadow: 0 0 50px 30px #fff inset;
}

.feed-item-desc:nth-of-type(1)::before {
	content: url(/!g/pix/sorahana-butterfly-pmm.gif);
	padding-right: 4px;
}

.rss {
	width: 15px;
	image-rendering: pixelated;
}

#updates .feed-item-desc:nth-of-type(1) a {
	color: #908BC2;
	text-shadow: 1px 1px 2px white;
}

#updates div a {
	font-size: 12px;
}

#updates h3 + h4 {
	padding: 2px;
	font-family: gaegu-b, var(--fonts);
	;
}

#updates h3 + h4 a {
	color: #908BC2;
	text-shadow: 1px 1px 2px #fff;
}

#updates a:hover {
	letter-spacing: 0;
	text-decoration: underline
}

h3.feed-title {
	display: none;
}

#widget {
	font-family: gaegu-l, var(--fonts);
	font-size: 17px;
	top: -10px;
	height: 110%
}

#button {
	height: 110px;
}

#button p {
	margin: 4px 5px;
	font-family: simple, var(--fonts);
	font-size: 20px;
	line-height: 14px
}
/* ... */

